methods.slug.SlugTracking.scala.error
Erreur de compilation :
SlugTracking:7: error: value update is not a member of java.awt.Color
  do {avance();} while (getCouleurSol() = Color.green)
                        ^SlugTracking:7: error: type mismatch;
 found   : Unit
 required: Boolean
  do {avance();} while (getCouleurSol() = Color.green)
  ^